--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
     <h1>System Administrator Portfolio</h1>
   </header> -->
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  
 
   <section id="profile" class=" profile-container">
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
     <div class="pro-pic">
       <img src="images/ibrahim2.jpg" alt="Mohamed Ibrahim Profile Picture" class="round-image">
     </div>
     <h1 class="myname">MOHAMED IBRAHIM</h1>
-    <p class="role">SYSTEM ADMININSTRATOR</p>    
+    <p class="role">SYSTEM ADMININSTRATOR</p>   
+    <li class="btn"> <a href="#about">Read More</a> </li> 
   </section>
 
 
@@ -224,4 +226,6 @@
     <p>Powered by Mohamed Ibrahim</p>
   </footer> -->
 </body>
+
+<script src="script/script.js"></script>
 </html>
