--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>System Administrator Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" media="screen and (max-width:768px)" href="css/index-media.css">
 
@@ -16,18 +20,26 @@
   
 
   <section id="profile" class=" profile-container">
-    <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+
+    <!-- Navbar -->
+    <nav class="nav1">
+      <a class="smooth-scroll" href="#about">About</a>
+      <a class="smooth-scroll" href="#experience">Experience</a>
+      <a class="smooth-scroll" href="#certification">Certifications</a>
+      <a class="smooth-scroll" href="#skills">Skills</a>
+      <a class="smooth-scroll" href="#projects">Projects</a>
+      <a class="smooth-scroll" href="#contact">Contact</a>
     </nav>
+
+    
+
+    <!-- Profile -->
     <div class="pro-pic">
       <img src="images/ibrahim2.jpg" alt="Mohamed Ibrahim Profile Picture" class="round-image">
     </div>
     <h1 class="myname">MOHAMED IBRAHIM</h1>
-    <p class="role">SYSTEM ADMININSTRATOR</p>   
-    <li class="btn"> <a href="#about">Read More</a> </li> 
+    <p class="role">SYSTEM ADMINISTRATOR</p>   
+    <li class="btn"> <span class="material-symbols-outlined">chevron_right</span><a class="smooth-scroll" href="#about">Read More</a> </li> 
   </section>
 
 
@@ -61,10 +73,14 @@
            <h6>Aug 23-Mar 24</h6>
         </div>
         <p class="smaller lh-20 cmp-name">Escrappy Recyclers, Dubai</p>
-        <p class="parag">Windows Server 2019 | Virtual Machine | Microsoft
+        <p class="parag">Installing and configuring hardware, software, and networks including setting up servers, workstations, operating systems, and other IT equipment.</p>
+        <p class="parag">Monitoring system performance and ensure that all systems are running smoothly. Checking up internet connectivity, setting up guest wifi, monitoring NVR, identifying and resolving performance issues.</p>
+        <p class="parag">Providing technical support to end-users, helping them troubleshoot and resolve IT issues and providing assistance with software installation, resolving network connectivity issues and resetting passwords.</p>
+        <p class="parag">Setting up and maintaining Google Workspace with company domain and creating new gmail ids to end users. Setting up mail forwarding, sharing drive and setting up permission, resetting password.</p>
+        <!-- <p class="parag">Windows Server 2019 | Virtual Machine | Microsoft
            Active Directory | DHCP | DNS | Hyper - V | User and
            Computer Management | GPO | Google Workspace
-           Administration | NVR Maintenance and more.</p>
+           Administration | NVR Maintenance and more.</p> -->
      </div>
 
      <!-- Experience as TECHNICAL ENGINEER -->
@@ -74,9 +90,11 @@
          <h6>Feb 22 - Aug 23</h6>
       </div>
       <p class="smaller lh-20 cmp-name">Escrappy Recyclers, Dubai</p>
-      <p class="parag">Technical Support | Computer Hardware and
-      Software Troubleshooting | LAN | Windows OS
-      Installation | IT Asset Record Maintenance and more.</p>
+      <p class="parag">Diagnose and resolve technical issues reported by users. Finding the root cause of the problem, analyzing error messages, and applying appropriate solutions to restore functionality</p>
+      <p class="parag">Providing guidance and assistance to users who encounter technical difficulties with hardware or software. Helping users to configure software settings, troubleshoot network connectivity issues</p>
+      <p class="parag">Providing support remotely, using remote desktop software or phone support tools to assist users located in different locations. Guide users through troubleshooting steps and perform remote diagnostics to identify and resolve issues</p>
+      <p class="parag">Preparing laptops and installing operating systems and softwares for the newly joining employees. Maintaining all the IT asset records in detailed inventory properly</p>
+      <p class="parag">Sanitizing data from storage devices using Active Killdisk Software and issuing Erase certificate to the client as per their request.</p>
    </div>
 
    <!-- Experience as COMPUTER SERVICE ENGINEER -->
@@ -143,7 +161,7 @@
             <div class="cname lh-24">AZURE FUNDAMENTALS</div>
             <div class="provider smaller">Course Provider : Simplilearn</div>
          </div>
-         <div class="url-link"><a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiIxNzI4IiwiY2VydGlmaWNhdGVfdXJsIjoiaHR0cHM6XC9cL2NlcnRpZmljYXRlcy5zaW1wbGljZG4ubmV0XC9zaGFyZVwvdGh1bWJfNTA2MTQ5Ml8xNzEzNTk2ODU0LnBuZyIsInVzZXJuYW1lIjoiTU9IQU1FRCBJQlJBSElNIn0%3D&utm_source=shared-certificate&utm_medium=lms&utm_campaign=shared-certificate-promotion&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F4225%2FAzure-Fundamentals%2Fcertificate%2Fdownload-skillup&%24web_only=true&_branch_match_id=1259815491020211059&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXL87MLcjJ1EssKNDLyczL1k%2FVz8jJToyMDKwM90wCAPKP%2BH0lAAAA" target="_blank"><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
+         <div class="url-link"><a href="https://simpli-web.app.link/e/3yWwpwvSeKb" target="_blank"><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
          <div class="fin-date"><h6>April 23</h6></div>
 
       </div>
@@ -153,7 +171,7 @@
             <div class="cname lh-24">CHAT GPT</div>
             <div class="provider smaller">Course Provider : Simplilearn</div>
          </div>
-         <div class="url-link"><a href=""><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
+         <div class="url-link"><a href="https://simpli-web.app.link/e/JRSyctmSeKb" target="_blank"><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
          <div class="fin-date"><h6>April 23</h6></div>
 
       </div>      
