--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
        <h6>Jan 20 - Dec 22</h6>
     </div>
     <p class="smaller lh-20 cmp-name">Dream Computers, India</p>
-    <p class="parag">Computer and Laptop Hardware | Troubleshooting
-    Hardware and Software Problems | Chip Level
-    Repairing | Sales and Marketing | Windows OS |
-    Microsoft Office | DTP Works and more.</p>
+    <p class="parag">Repair or replace defective chips or components on the laptop's motherboard or other circuit boards.Soldering, desoldering, and reworking components using specialized tools and techniques </p>
+    <p class="parag">Update firmware and BIOS (Basic Input/Output System) to resolve compatibility issues or improve system performance</p>
+    <p class="parag">Understanding and interpreting circuit schematics for identifying faulty components on the motherboard and fix the problem accordingly</p>
+    <p class="parag">Ensuring that repaired laptops meet quality standards and function reliably after repair</p>
+    <p class="parag">Maintaining detailed records of repairs, including the steps taken, components replaced, and any relevant diagnostic findings for tracking warranty status and providing accurate information to customers</p>
  </div>
 
 
@@ -130,7 +131,7 @@
             <div class="provider smaller">Course Provider : IBM</div>
          </div>
          <div class="url-link"><a href="https://coursera.org/share/b611061ef5744f95360825b307cd0c61" target="_blank"><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
-         <div class="fin-date"><h6>April 23</h6></div>
+         <div class="fin-date"><h6>Apr 23</h6></div>
 
       </div>
 
@@ -140,7 +141,7 @@
             <div class="provider smaller">Course Provider : Google Cloud</div>
          </div>
          <div class="url-link"><a href="https://coursera.org/share/0b738be7059ee44a0fca46a6ce9eb06c" target="_blank"><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
-         <div class="fin-date"><h6>April 23</h6></div>
+         <div class="fin-date"><h6>Sep 23</h6></div>
 
       </div>
 
@@ -150,7 +151,7 @@
             <div class="provider smaller">Course Provider : Udemy</div>
          </div>
          <div class="url-link"><a href="https://www.udemy.com/certificate/UC-3deac5fd-3f4e-43a8-b707-528965a876d3/" target="_blank"><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
-         <div class="fin-date"><h6>April 24</h6>
+         <div class="fin-date"><h6>Apr 24</h6>
 
          </h6></div>
 
@@ -162,7 +163,7 @@
             <div class="provider smaller">Course Provider : Simplilearn</div>
          </div>
          <div class="url-link"><a href="https://simpli-web.app.link/e/3yWwpwvSeKb" target="_blank"><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
-         <div class="fin-date"><h6>April 23</h6></div>
+         <div class="fin-date"><h6>Apr 24</h6></div>
 
       </div>
 
@@ -172,7 +173,7 @@
             <div class="provider smaller">Course Provider : Simplilearn</div>
          </div>
          <div class="url-link"><a href="https://simpli-web.app.link/e/JRSyctmSeKb" target="_blank"><img class="web-link-logo" src="images/icons8-link-50.png" alt="url link"></a></div>
-         <div class="fin-date"><h6>April 23</h6></div>
+         <div class="fin-date"><h6>Apr 24</h6></div>
 
       </div>      
    </div>
@@ -192,15 +193,15 @@
     <div class="skills ">
       <h2>Skills</h2>
       <ul>
-        <li>Operating Systems: Windows OS (Server and Client), Mac OS, Linux (Ubuntu, CentOS),</li>
-        <li>Networking: OSI, TCP/IP, DNS, DHCP, VPN, VLAN</li>
-        <li>Administration: Microsoft Active Directory, Google Workspace </li>
-        <li>Programming: C# .Net, HTML5, CSS3, Oracle Apex</li>
-        <li>Database: Microsoft SQL Server 2016, Oracle SQL and PL/SQL  </li>
-        <li>Cloud Services: Azure Fundamentals</li>
-        <li>Virtualization: Hyper-V, Azure Virtual Machine</li>
-        <li>Storage Devices: DAS, NAS, SAN</li>        
-        <li>Security: Firewall configuration</li>        
+        <li>Operating Systems  : Windows OS (Server and Client), Mac OS, Linux (Ubuntu, CentOS),</li>
+        <li>Networking : OSI, TCP/IP, DNS, DHCP, VPN, VLAN</li>
+        <li>Administration : Microsoft Active Directory, Google Workspace </li>
+        <li>Programming : C# .Net, HTML5, CSS3, Oracle Apex</li>
+        <li>Database : Microsoft SQL Server 2016, Oracle SQL and PL/SQL  </li>
+        <li>Cloud Services : Azure Fundamentals</li>
+        <li>Virtualization : Hyper-V, Azure Virtual Machine</li>
+        <li>Storage Devices : DAS, NAS, SAN</li>        
+        <li>Security : Firewall configuration</li>        
       </ul>
     </div>        
   </section>
@@ -214,12 +215,12 @@
     <div class="projects">
       <h2>Projects</h2>
       <ul>
-        <li>Implemented a centralized monitoring system using Nagios to monitor the health and performance of network devices and servers.</li>
-        <li>Designed and deployed a backup solution using Veeam to ensure data protection and disaster recovery.</li>
-        <li>Configured and managed a Windows Active Directory environment with user authentication, group policies, and security settings.</li>
-        <li>Automated routine tasks using PowerShell scripting, resulting in significant time savings and improved efficiency.</li>
-        <li>Deployed and maintained virtualized infrastructure using VMware vSphere, including ESXi hosts and virtual machines.</li>
-      </ul>
+        <li>Designed IT infrastructure using Cisco Packet Tracer and deployed physically using Rack Server, Disk array Layer 2 Switch, Wifi Router at on-premises </li>
+        <li>Installed and configured Microsoft Windows Active Directory 2019 environment and setting up domain controller with user authentication, group policies, and security settings.</li>
+        <li>Implemented centralized authentication, file server and storage permission, print server using Windows server 2019.  </li>
+        <li>Installed and configured Synology NAS devices as an additional storage device to Network Video Recorder.  </li>
+        <li>Created a inventory management web application using Oracle Apex low code development tool and Oracle SQL</li>
+        </ul>
     </div>
   </section>
 
